# VesselTracing

./: .gitignore  pyproject.toml
scripts/: run.py
src/: __init__.py  analysis.py  config.py  io.py  plotting.py  preprocessing.py
src/vessel_tracing/: __init__.py  segmentation.py  skeletonize.py
src/vessel_tracing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
